--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -27,7 +27,7 @@
    <div *ngIf="enableNewPropiedad">
   <ion-item>
     
-      <ion-button slot="end" (click)="enableNewPropiedad = false " >
+      <ion-button slot="end" (click)="enableNewPropiedad = false " (click)="enablelista = true "  >
      <ion-icon name="close"></ion-icon>
   </ion-button>
 
@@ -80,19 +80,23 @@
                 <ion-input [(ngModel)]="newPropiedad.telefono"  placeholder="+569 000 000" type="tel" > </ion-input>
               </ion-item>
               <ion-item>
-                <ion-label position="floating">
+                <ion-label >
                   Foto
                 </ion-label>
                 <ion-buttons slot="end">
-                 <ion-icon slot="icon-only" name="images-outline"></ion-icon>
-                 <ion-input  style="display: none" type="file"  accept="image/*"></ion-input>
-                </ion-buttons>
-                    </ion-item>
-        <ion-button (click)="guardarPropiedad()"  (click)="enableNewPropiedad = false " color="secondary" expand="block" shape="round" >Guardar</ion-button>
+                  <ion-button>
+                    <label for="file-upload">
+                    <ion-icon slot="icon-only" name="images-outline"></ion-icon>
+                  </label>
+                  <input (change)="nuevaImagen($event)" id="file-upload" style="display: none" type="file"  accept="image/*">
+                </ion-button>
+               </ion-buttons>
+             </ion-item>
+        <ion-button (click)="guardarPropiedad()"  (click)="enableNewPropiedad = false " (click)="enablelista = true " color="secondary" expand="block" shape="round" >Guardar</ion-button>
       </div>
     <!--listas de propiedades Cascada-->
       
-      <ion-accordion-group  [multiple]="true" [value]="['first', 'third']" lines="none">
+      <ion-accordion-group  *ngIf="enablelista" [multiple]="true" [value]="['first', 'third']" lines="none">
         <ion-accordion *ngFor="let P of Propiedades">
           <ion-item slot="header"  color="secondary">
             <ion-col>
@@ -110,30 +114,32 @@
                 
                 <ion-label>Direccion:</ion-label>
                 <ion-label>Numero:</ion-label>
+                <ion-label>Comuna:</ion-label>
                 <ion-label>Tipo:</ion-label>
                 <ion-label>Telefono:</ion-label>
               </ion-col>
               <ion-col>     
                 <ion-label>{{P.direccion}}</ion-label>
                 <ion-label>{{P.numero}}</ion-label>
+                <ion-label>{{P.comuna}}</ion-label>
                 <ion-label>{{P.tipo}}</ion-label>
                 <ion-label>{{P.telefono}}</ion-label>
               </ion-col>
                   <ion-col>
-              <ion-button  (click)="newPropiedad = P; enableNewPropiedad = true" color="warning" size="small">
+              <ion-button  (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false " color="warning" size="small">
                 <ion-icon  name="create-outline"></ion-icon>
               </ion-button>
               <ion-button    (click)="deletePropiedad(P)" color="danger" size="small">
                 <ion-icon  name="trash-outline"></ion-icon>
               </ion-button>
                </ion-col>
-          
             </ion-item>
-            
+           
          
         </ion-accordion>
       </ion-accordion-group>
   
     </ion-card-content>
   </ion-card>
+  <img [src]="newImage">
 </ion-content>
