--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -5,44 +5,63 @@
         <ion-icon slot="icon-only" name="menu-sharp"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-buttons slot="end">
-      <ion-button [routerLink]="['./perfil']">
-        <ion-icon slot="icon-only" name="person-circle"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-
     <ion-title>Registro</ion-title>
   </ion-toolbar>
 </ion-header>
-<ion-content>
+
+<ion-content >
+ 
+
+
   <ion-card>
     <ion-card-header>
-      <ion-card-title>Ingresa tus datos</ion-card-title>
+      <ion-button slot="end"  (click)="salir()"  >
+        <ion-icon name="close"></ion-icon>
+     </ion-button>
+  
+    
     </ion-card-header>
     <ion-card-content>
-      <form [formGroup]="formularioRegistro" (keyup.enter)="guardar()">
-        <ion-item>
-          <ion-label position="floating">Nombre Completo</ion-label>
-          <ion-input formControlName="nombre"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Direccion de correo</ion-label>
-          <ion-input formControlName="mail" type="email" placeholder="ejemplo@dominio.cl" ngModel email></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">telefono (opcional) </ion-label>
-          <ion-input formControlName="telefono" type="tel" placeholder="+56 900000000"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Contraseña</ion-label>
-          <ion-input formControlName="pass" type="password"></ion-input>
-        </ion-item>
-        <ion-item>
-          <ion-label position="floating">Confirmar contraseña</ion-label>
-          <ion-input formControlName="confirmacion" type="password"></ion-input>
-        </ion-item>
-        <ion-button color="secondary" expand="block" shape="round" (click)="guardar()">Registrarse</ion-button>
-      </form>
+       <!--FORMULARIO DE PERFIL-->
+   <div >
+            <ion-item>
+                <ion-label position="floating">Nombre</ion-label>
+                <ion-input [(ngModel)]="cliente.nombre"  placeholder="Nombre" type="text" inputmode="text"></ion-input>
+              </ion-item>    
+              <ion-item>
+                <ion-label position="floating">Correo</ion-label>
+                <ion-input [(ngModel)]="cliente.email"  placeholder="ejemplo@mail.cl" type="text" inputmode="text"> </ion-input>
+              </ion-item>
+              <ion-item>
+                <ion-label position="floating">Contraseña</ion-label>
+                <ion-input [(ngModel)]="cliente.password"  placeholder="+56 912345678"type="number" inputmode="numeric"> </ion-input>
+              </ion-item>
+              
+              <ion-item>
+                <ion-label position="floating">Referencia</ion-label>
+                <ion-input [(ngModel)]="cliente.referencia"  placeholder="referencia" type="text" inputmode="text"> </ion-input>
+              </ion-item>
+             
+              <ion-item>
+                <ion-label >
+                  Foto
+                </ion-label>
+                <ion-buttons slot="end">
+                  <ion-button>
+                    <label for="file-upload">
+                    <ion-icon slot="icon-only" name="images-outline"></ion-icon>
+                  </label>
+                  <input (change)="newImageUpload($event)" id="file-upload" style="display: none" type="file"  accept="image/*">
+                </ion-button>
+               </ion-buttons>
+             </ion-item>
+             <ion-item>
+              <img [src]="cliente.foto">
+             </ion-item>
+
+        <ion-button (click)="registrarse()" color="secondary" expand="block" shape="round" >registrar</ion-button>
+      </div>  
     </ion-card-content>
   </ion-card>
+
 </ion-content>
