--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,45 @@
-<ion-header>
-  <ion-toolbar color="secondary">
-    <ion-title>HomeApp</ion-title>
-
-    <ion-buttons slot="start">
-      <ion-button (click)="openMenu()">
-        <ion-icon slot="icon-only" name="menu-sharp"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-    <ion-buttons slot="end">
-      <ion-button [routerLink]="['perfil']">
-        <ion-icon slot="icon-only" name="person-circle"></ion-icon>
-      </ion-button>
-    </ion-buttons>
+<ion-header class="ion-no-border" mode="md">
+  <ion-toolbar>
+      <ion-buttons slot="start">
+          <ion-menu-button></ion-menu-button>
+      </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
+<ion-content>
+  <div class="main_content_div">
+
+      <div class="extra_header">
+          <div class="flex_div">
+              <div>
+                  <ion-label class="logo_text">BIENVENIDO A <span>PROPIEDADES</span></ion-label>
+                  <ion-label class="small_text">
+                      toda la informacion que necesitas al alcance de tus manos
+                       
+                  </ion-label>
+              </div>
+              <div>
+                  
+              </div>
+          </div>
+          <ion-input type="text" placeholder="Buscar propiedades">
+              <ion-icon name="search"></ion-icon>
+          </ion-input>
+      </div>
+
+      <div class="content_div">
+          <div class="grid_box">
+              <div class="box_div" >
+                  <ion-label>Propiedades</ion-label>
+              </div>
+              <div class="box_div" >
+                  <ion-label>Cuentas</ion-label>
+              </div>
+          </div>         
+          
+      </div>
+
+      
+
+  </div>
+</ion-content>
