--- a/src/app/pages/perfil/perfil.component.html
+++ b/src/app/pages/perfil/perfil.component.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar style="--background:   #8e8e94;" >
+  <ion-toolbar  >
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
