--- a/src/global.scss
+++ b/src/global.scss
@@ -24,3 +24,97 @@
 @import "~@ionic/angular/css/text-alignment.css";
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
+
+ion-content {
+    --background:  #8e8e94;
+}
+ion-header {
+    background:   #58585e;
+ }
+
+
+ion-footer{
+    background:   #58585e;
+}
+
+
+    ion-label {
+        display: block;
+    }
+
+    ion-slides {
+        margin-bottom: 50px;
+    }
+
+    ion-button {
+        --background:#8e8e94;
+        margin: 0px;
+        --border-radius: 5px;
+        height: 50px;
+      margin-bottom: 10px;
+      color: #b6b6c0;
+    }  
+ 
+
+.main_content_div {
+    width: 100%;
+    padding: 16px;
+
+    .bold_lbl {
+        font-family: 'medium';
+        text-align: center;
+        font-size: 18px;
+        margin-bottom: 20px;
+    }
+
+    .simple_lbl {
+        font-size: 15px;
+        color:  #d2d2d6;
+        text-align: center;
+    }
+ 
+  
+    ion-label {
+        display: block;
+    }
+
+    ion-input {
+        background: rgba(70, 65, 69, 0.3);
+        border-radius: 5px;
+        margin-bottom: 20px;
+        height: 50px;
+        --padding-start: 8px;
+        color: white;
+
+        ion-icon {
+            margin-left: 10px;
+            color: white;
+        }
+    }
+
+    ion-button {
+        --background:#8e8e94;
+        margin: 0px;
+        --border-radius: 5px;
+        height: 50px;
+      margin-bottom: 10px;
+      color: #b6b6c0;
+    }
+ 
+    .bold_lbl {
+        font-family: 'semi-bold';
+        font-size: 26px;
+        text-align: center;
+        color: white;
+    }
+
+    .small_lbl {
+        text-align: center;
+        color: white;
+        font-size: 14px;
+        margin-bottom: 30px;
+    }
+
+ 
+
+}
