--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -19,20 +19,18 @@
   <div class="main_content_div"> 
   <ion-card style="--background:  #808081; max-width: 800px; margin: auto;" >
         <!--CABECERA -->
-        
         <ion-card-header>
-          <!--btn agregrar  -->
-      <ion-button *ngIf="enablelista" (click)="bntNuevo()" >
+        <!--btn agregrar  -->
+       <ion-button *ngIf="enablelista" (click)="bntNuevo()" >
         <ion-label>Nuevo</ion-label>
         <ion-icon name="add"></ion-icon>
-      </ion-button>
+       </ion-button>
          <!--btn cancelar -->
-      <ion-button *ngIf="!enablelista" (click)="enableNewPropiedad = false " (click)="enablelista = true" >
+       <ion-button *ngIf="!enablelista" (click)="enableNewPropiedad = false " (click)="enablelista = true" >
          <ion-label>cancelar</ion-label>
          <ion-icon name="close"></ion-icon>
-      </ion-button>
+       </ion-button>
         </ion-card-header>
-        
                 <!--contenedor de agregar-->
         <ion-card-content *ngIf="enableNewPropiedad"> 
           <ion-item>
@@ -88,12 +86,10 @@
           <ion-button (click)="guardarPropiedad()"  (click)="enableNewPropiedad = false " (click)="enablelista = true " expand="block" >Guardar</ion-button>
         </ion-col>      
       </ion-card-content>
- 
-         <!--listas de propiedades Cascada-->
+         <!--listas de propiedades Cascada--> 
          <div  *ngIf="enablelista">
           <ion-card *ngFor="let P of Propiedades" >
           <ion-accordion-group  [multiple]="true" [value]="['first', 'third']" >
-          
             <ion-accordion >
               <ion-item slot="header" >      
               <ion-grid [fixed]="true">
@@ -117,52 +113,45 @@
                 <ion-grid [fixed]="true">
                 <ion-row>
                   <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>Aqui detalles de cuentas  agua</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label>cuentas  agua</ion-label></ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>Aqui detalles de cuentas electricidad</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label>cuentas electricidad</ion-label></ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>Aqui detalles de cuentas gas</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label>cuentas gas</ion-label></ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>Aqui detalles de cuentas internet</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label>cuentas internet</ion-label></ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col >
                   <ion-button (click)="go()" color="primary" size="small" style="margin: 5px;">
                   <ion-icon name="cash-outline" ></ion-icon><ion-label>Cuentas</ion-label>
                   </ion-button>
-                  <ion-button   color="secondary" size="small" style="margin: 5px;">
-                  <ion-icon name="archive-outline" ></ion-icon><ion-label>Tareas</ion-label>
+                  <ion-button  color="secondary" size="small" style="margin: 5px;">
+                  <ion-icon name="person-add"></ion-icon><ion-label>contacto</ion-label>
                   </ion-button>
                   <ion-button href="https://api.whatsapp.com/send?phone=56{{P.telefono}}&text=" color="success" size="small" style="margin: 5px;">
-                    <ion-icon name="logo-whatsapp"></ion-icon>
-                    </ion-button>
+                  <ion-icon name="logo-whatsapp"></ion-icon>
+                  </ion-button>
                   <ion-button (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false " color="warning" size="small" style="margin: 5px;">
                   <ion-icon name="create-outline"></ion-icon>
                   </ion-button>
                   <ion-button (click)="deletePropiedad(P)" color="danger" size="small" style="margin: 5px;">
                   <ion-icon name="trash-outline"></ion-icon>
                   </ion-button>
-                  <ion-button  (click)="guardarContacto(P)" size="small" style="margin: 5px;">
-                    <ion-icon name="create-outline"></ion-icon><ion-label>contacto</ion-label>
-                    </ion-button>
-                  
               </ion-col>
-              
             </ion-row>
           </ion-grid>
-         
               </ion-item>
             </ion-accordion>
           </ion-accordion-group>
         </ion-card>
          </div>    
       </ion-card>
-      
   </div>
 </ion-content>
