--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -113,7 +113,7 @@
                 <ion-grid [fixed]="true">
                 <ion-row>
                   <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
-                  <ion-col size="auto"><ion-label>cuentas  agua</ion-label></ion-col>
+                  <ion-col size="auto"><ion-label>cuentas agua</ion-label></ion-col>
                 </ion-row>
                 <ion-row>
                   <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
@@ -132,7 +132,7 @@
                   <ion-button (click)="go()" color="primary" size="small" style="margin: 5px;">
                   <ion-icon name="cash-outline" ></ion-icon><ion-label>Cuentas</ion-label>
                   </ion-button>
-                  <ion-button  color="secondary" size="small" style="margin: 5px;">
+                  <ion-button [routerLink]="['/contacto']" color="secondary" size="small" style="margin: 5px;">
                   <ion-icon name="person-add"></ion-icon><ion-label>contacto</ion-label>
                   </ion-button>
                   <ion-button href="https://api.whatsapp.com/send?phone=56{{P.telefono}}&text=" color="success" size="small" style="margin: 5px;">
