--- a/src/app/backend/add-gastos/add-gastos.component.html
+++ b/src/app/backend/add-gastos/add-gastos.component.html
@@ -9,24 +9,7 @@
 <ion-content>
   <div class="main_content_div">
     <ion-card style="--background:  #c6c6da; max-width: 800px; margin: auto;">
-      <!--empresas-->
-      <ion-card-content style="   max-width: 800px; margin: auto;">
-        <ion-label class="bold_lbl">EMPRESAS</ion-label>
-        <ion-item>
-          <ion-col><ion-label>Rut</ion-label></ion-col>
-          <ion-col><ion-label color="light">Nombre</ion-label></ion-col>
-          <ion-col><ion-label color="danger">Giro</ion-label></ion-col>
-          <ion-col><ion-label color="tertiary">Contacto</ion-label></ion-col>
-          <ion-col><ion-label>Direccion</ion-label></ion-col>
-        </ion-item>
-        <ion-item *ngFor="let E of filtroEmpresa()">
-          <ion-col size="auto"><ion-label>{{E.rut}}</ion-label></ion-col>
-          <ion-col size="auto"><ion-label color="light">{{E.nombre}}</ion-label></ion-col>
-          <ion-col size="auto"> <ion-label color="danger">{{E.giro}}</ion-label></ion-col>
-          <ion-col size="auto"><ion-label color="tertiary">{{E.telefono}}</ion-label></ion-col>
-          <ion-col size="auto"><ion-label>{{E.direccion}}</ion-label></ion-col>
-        </ion-item>
-      </ion-card-content>
+
       <!--agregar gasto-->
       <ion-card-content style="   max-width: 650px; margin: auto;">
         <ion-label class="bold_lbl">Agregar Gastos</ion-label>
@@ -43,73 +26,75 @@
         </ion-item>
         <ion-item>
           <ion-label>Empresa</ion-label>
-          <ion-select  interface="popover">
+          <ion-select [(ngModel)]="newGastos.Nombre_emisor" interface="popover"  #n (ionChange)="capturaNombre(n.value)">
             <ion-select-option *ngFor="let Empresa of filtroEmpresatipo()" [value]="Empresa.nombre">{{Empresa.nombre}}</ion-select-option>
           </ion-select>
         </ion-item>
         <ion-item><ion-col size="auto"><ion-label>Rut Emisor:</ion-label></ion-col>
+          <ion-select [(ngModel)]="newGastos.rut_emisor">
+            <ion-select-option  type="text" inputmode="text" *ngFor="let emp of filtroRut()" [value]="emp.rut">{{emp.rut}}</ion-select-option>
+          </ion-select>
+        </ion-item>
+        <ion-item>
+          <ion-col size="auto"><ion-label>Numero:</ion-label></ion-col>
           <ion-col>
-            <ion-input type="number" inputmode="number"></ion-input>
+            <ion-input  [(ngModel)]="newGastos.Num_documento" type="number" inputmode="number"></ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
-          <ion-col size="auto"><ion-label>Nombre:</ion-label></ion-col>
-          <ion-col>
-            <ion-input name="name" type="text" inputmode="text"></ion-input>
-          </ion-col>
-          <ion-col size="auto"><ion-label>Numero:</ion-label></ion-col>
-          <ion-col>
-            <ion-input type="number" inputmode="number"></ion-input>
-          </ion-col>
+          <ion-col size="auto"><ion-label>Giro:</ion-label></ion-col>
+          <ion-select [(ngModel)]="newGastos.giro" >
+            <ion-select-option type="text" inputmode="text"  *ngFor="let emp of filtroRut()">{{emp.giro}}</ion-select-option>
+          </ion-select>
         </ion-item>
         <ion-item>
           <ion-col size="auto"><ion-label>Numero Clientes:</ion-label></ion-col>
           <ion-col>
-            <ion-input type="text" inputmode="text"></ion-input>
+            <ion-input type="text" inputmode="text" [(ngModel)]="newGastos.Numero_cliente"></ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
           <ion-col size="auto"><ion-label>Fecha emision:</ion-label></ion-col>
           <ion-col>
-            <ion-input type="date" inputmode="date"></ion-input>
+            <ion-input [(ngModel)]="newGastos.fecha_emision" type="date" inputmode="date" value="dd/mm/aaaa"></ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
           <ion-col size="auto"><ion-label>Fecha vencimiento:</ion-label></ion-col>
           <ion-col>
-            <ion-input type="date" inputmode="date"></ion-input>
+            <ion-input [(ngModel)]="newGastos.fecha_vencimiento" type="date" inputmode="date" value="dd/mm/aaaa"></ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
           <ion-col size="auto"><ion-label>Telefono +56</ion-label></ion-col>
           <ion-col>
-            <ion-input type="phone" inputmode="phone"></ion-input>
+            <ion-input type="text" inputmode="text" *ngFor="let emp of filtroRut()">{{emp.telefono}}</ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
           <ion-col size="auto"><ion-label>Neto:</ion-label></ion-col>
           <ion-col>
-            <ion-input name="rut" type="text" inputmode="text"></ion-input>
+            <ion-input  [(ngModel)]="newGastos.neto"  type="number" inputmode="number"  value="" ></ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
           <ion-col size="auto"><ion-label>Iva:</ion-label></ion-col>
           <ion-col>
-            <ion-input name="rut" type="text" inputmode="text"></ion-input>
+            <ion-input [(ngModel)]="newGastos.iva" type="number" inputmode="number" [value]="newGastos.neto * 0.19 " ></ion-input>
           </ion-col>
         </ion-item>
         <ion-item>
           <ion-col size="auto"><ion-label>Total:</ion-label></ion-col>
           <ion-col>
-            <ion-input name="rut" type="text" inputmode="text"></ion-input>
+            <ion-input [(ngModel)]="newGastos.Total"  type="number" inputmode="number" [value]="newGastos.neto * 1.19"> </ion-input>
           </ion-col>
         </ion-item>
         <ion-col>
-          <ion-button expand="block">Guardar</ion-button>
+          <ion-button (click)="guardarGasto()" (click)="btnLimpiar()" expand="block">Guardar</ion-button>
         </ion-col>
       </ion-card-content>
       <!--cuentas ingresadas-->
-      <ion-card-content style="   max-width: 800px; margin: auto;">
+      <ion-card-content style="max-width: 800px; margin: auto;">
         <ion-label class="bold_lbl">CUENTAS INGRESADAS</ion-label>
         <ion-item>
           <ion-col><ion-label>Id Propiedad</ion-label></ion-col>
@@ -128,7 +113,7 @@
         </ion-item>
       </ion-card-content>
       <!--gastos ingresado -->
-      <ion-card-content style="   max-width: 800px; margin: auto;">
+      <ion-card-content style="max-width: 800px; margin: auto;">
         <ion-label class="bold_lbl">GASTOS INGRESADOS</ion-label>
         <ion-item>
           <ion-col><ion-label>Factura</ion-label></ion-col>
@@ -140,15 +125,33 @@
           <ion-col> <ion-label color="tertiary">Total</ion-label></ion-col>
         </ion-item>
         <ion-item *ngFor="let g of gastos">
-          <ion-col><ion-label>{{g.Num_documento}}</ion-label></ion-col>
-          <ion-col><ion-label color="light">{{g.rut_emisor}}</ion-label></ion-col>
-          <ion-col> <ion-label color="danger">{{g.Numero_cliente}}</ion-label></ion-col>
-          <ion-col><ion-label color="tertiary">{{g.Nombre_emisor}}</ion-label></ion-col>
-          <ion-col><ion-label>{{g.fecha_emision}}</ion-label></ion-col>
-          <ion-col><ion-label>{{g.fecha_vencimiento}}</ion-label></ion-col>
-          <ion-col> <ion-label color="tertiary">{{g.Total}}</ion-label></ion-col>
+          <ion-col size="auto"><ion-label>{{g.Num_documento}}</ion-label></ion-col>
+          <ion-col size="auto"><ion-label color="light">{{g.rut_emisor}}</ion-label></ion-col>
+          <ion-col size="auto"> <ion-label color="danger">{{g.Numero_cliente}}</ion-label></ion-col>
+          <ion-col size="auto" style="max-width: 200px;;"><ion-label color="tertiary">{{g.Nombre_emisor}}</ion-label></ion-col>
+          <ion-col size="auto"><ion-label>{{g.fecha_emision}}</ion-label></ion-col>
+          <ion-col size="auto"><ion-label>{{g.fecha_vencimiento}}</ion-label></ion-col>
+          <ion-col size="auto"> <ion-label color="tertiary">${{g.Total}}</ion-label></ion-col>
         </ion-item>
       </ion-card-content>
+            <!--empresas-->
+            <ion-card-content style="max-width: 800px; margin: auto;">
+              <ion-label class="bold_lbl">EMPRESAS</ion-label>
+              <ion-item>
+                <ion-col><ion-label>Rut</ion-label></ion-col>
+                <ion-col><ion-label color="light">Nombre</ion-label></ion-col>
+                <ion-col><ion-label color="danger">Giro</ion-label></ion-col>
+                <ion-col><ion-label color="tertiary">Contacto</ion-label></ion-col>
+                <ion-col><ion-label>Direccion</ion-label></ion-col>
+              </ion-item>
+              <ion-item *ngFor="let E of filtroEmpresa()">
+                <ion-col size="auto"><ion-label>{{E.rut}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-label color="light">{{E.nombre}}</ion-label></ion-col>
+                <ion-col size="auto"> <ion-label color="danger">{{E.giro}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-label color="tertiary">{{E.telefono}}</ion-label></ion-col>
+                <ion-col size="auto"><ion-label>{{E.direccion}}</ion-label></ion-col>
+              </ion-item>
+            </ion-card-content>
     </ion-card>
   </div>
 </ion-content>
