--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -107,7 +107,7 @@
             <ion-accordion>
               <ion-item slot="header">
                 <ion-grid [fixed]="true">
-                  <ion-row [ngStyle]="{'background-color':P.estado === 'Desactivada' ? 'gray' : '' }">
+                  <ion-row [ngStyle]="{'background':P.estado === 'Desactivada' ? '#8ea8b3' : '' }">
                     <ion-col size="auto"><ion-label>{{P.id_propiedad}}</ion-label></ion-col>
                     <ion-col size="auto"><ion-icon name="home"></ion-icon></ion-col>
                     <ion-col size="auto"><ion-label>{{P.tipo}}</ion-label></ion-col>
@@ -253,17 +253,7 @@
                       <ion-icon name="add-circle-outline"></ion-icon><ion-label>Cuentas</ion-label>
                     </ion-button>
                   </div>
-                  <ion-row  *ngIf="P.estado == 'Activa'" >
-                    <ion-col size="auto"> <ion-button size="small" color="dark">
-                        <ion-label>Finalizar Arriendo</ion-label>
-                      </ion-button></ion-col>
-                    <ion-col size="auto"> <ion-button size="small" color="dark">
-                        <ion-label>Nuevo Arrendatario</ion-label>
-                      </ion-button></ion-col>
-                    <ion-col size="auto"><ion-button size="small" color="dark">
-                        <ion-label>Condicion del inmueble</ion-label>
-                      </ion-button></ion-col>
-                  </ion-row>
+                
                   <ion-row  *ngIf="P.estado == 'Activa'" >
                     <ion-col size="auto">
                       <ion-button (click)="newPropiedad = P; enableNewPropiedad = true; enablelista = false "
