--- a/src/app/backend/set-propiedad/set-propiedad.component.html
+++ b/src/app/backend/set-propiedad/set-propiedad.component.html
@@ -150,7 +150,7 @@
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="water"></ion-icon></ion-col>
                         <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                        <ion-col size="auto"><ion-label>Numuero Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>N° Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
                       <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
@@ -167,7 +167,7 @@
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="flash"></ion-icon></ion-col>
                         <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>N° Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
                       <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
@@ -184,7 +184,7 @@
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="flame"></ion-icon></ion-col>
                         <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>N° Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
                       <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
@@ -201,7 +201,7 @@
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="globe"></ion-icon></ion-col>
                         <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>N° Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
                       <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
@@ -218,7 +218,7 @@
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="business-outline"></ion-icon></ion-col>
                         <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>N° Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
                       <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
@@ -235,7 +235,7 @@
                       <ion-row>
                         <ion-col size="auto"><ion-icon name="newspaper-outline"></ion-icon></ion-col>
                         <ion-col size="auto"><ion-label>{{c.empresa}}</ion-label></ion-col>
-                        <ion-col size="auto"><ion-label>Numero Ciente:</ion-label></ion-col>
+                        <ion-col size="auto"><ion-label>N° Ciente:</ion-label></ion-col>
                         <ion-col size="auto"><ion-label>{{c.numCliente}}</ion-label></ion-col>
                       </ion-row>
                       <ion-row *ngFor="let G of filtroGasto(c.numCliente, c.empresa)">
