--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,5 +20,10 @@
     <div *ngFor="let propiedad of filteredProperties">
       <app-propiedad [propiedad]="propiedad"></app-propiedad>
     </div>
+
+
+    <div *ngFor="let cuentas of cuentas">
+      <app-cuenta></app-cuenta>
+    </div>
   </div>
 </ion-content>
